//
// Copyright 2016 Middlesex University
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

option java_multiple_files = true;
option java_package = "uk.ac.mdx.cs.ie.contextserver";
option java_outer_classname = "ContextServerProto";
option objc_class_prefix = "HLW";

package contextserver;

service ContextService {
    rpc logEvents (LogEventRequest) returns (ServiceResponse){}
    rpc registerUser (RegisterUserRequest) returns (ServiceResponse){}
    rpc setLearning (SetLearningRequest) returns (ServiceResponse){}
}

message LogEventRequest {
    int32 userid = 1;
    repeated int32 origin = 2;
    repeated string location = 3;
    repeated int64 date = 4;
    repeated string text = 5;
}

message RegisterUserRequest {
    int32 userid = 1;
    string username = 2;
    string deviceid = 3;
}

message SetLearningRequest {
    int32 userid = 1;
    bool learning = 2;
}

message ServiceResponse {
    int32 response = 1;
}